--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- 썸네일(미리보기) 메타 -->
-  <meta property="og:title" content="🔥오늘 급등주,  지금 바로 확인하기" />
+  <meta property="og:title" content="🔥오늘의 급등주!,  지금 바로 확인" />
   <meta property="og:description" content="무료 입장 마감 임박" />
   <meta property="og:image" content="https://i.ibb.co/WNWRXD93/photo-2025-12-29-18-31-18.jpg" />
   <meta property="og:type" content="website" />
